# xpu-perf

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml
projects/infer_perf/llm_perf/: test-result-nc40adsh100v5.md
projects/infer_perf/llm_perf/server/: endpoint.py
projects/micro_perf/: .gitignore  README.md  client.py  launch.py  server.py
projects/micro_perf/op_defs/: CHANGELOG.md  README.md  __init__.py
projects/micro_perf/op_defs/basic_ops/: tensor_gemm_ops.py  vector_activation_ops.py  vector_index_ops.py  vector_linear_ops.py  vector_norm_ops.py  vector_reduction_ops.py  vector_sfu_ops.py  xccl_ops.py
projects/micro_perf/op_defs/llm_ops/: _common.py  add_rms_norm.py  add_rms_norm_dynamic_quant.py  flash_attention.py  head_rms_norm.py  head_rms_norm_dynamic_quant.py  moe_gather.py  moe_gating_gemm.py  moe_quant_group_gemm.py  moe_quant_group_gemm_combine.py  moe_scatter_dynamic_quant.py  moe_softmax_topk.py  moe_swiglu.py  moe_swiglu_dynamic_quant.py  qk_rms_norm.py  quant_group_gemm_reduce_sum.py  quant_matmul.md  quant_matmul.py  rotary_embedding.py  scale_dynamic_quant.py  store_kv_cache.py  swiglu.py  swiglu_dynamic_quant.py
projects/micro_perf/vendor_ops/: CHANGELOG.md  README.md  __init__.py
projects/micro_perf/workloads/llm/: README.md
projects/trace_gen/: DOWNLOAD.md  README.md  README_CN.md
projects/xpu_oj/llm_sim/: .gitignore  endpoint.py  engine.py  requirements.txt
projects/xpu_oj/llm_sim/model_zoo/: CHANGELOG.md  README.md  __init__.py  op_templates.py  topology.py
src/xpu_perf/model_perf/: .gitignore  utils.py
(+38 files in other folders)
